-changes for home button text size and old icons

--- a/app/res/drawable/btn_finish_background.xml
+++ b/app/res/drawable/btn_finish_background.xml
@@ -4,5 +4,5 @@
         android:state_pressed="true"
         android:drawable="@color/cc_attention_positive_text"/>
     <item
-        android:drawable="@color/cc_attention_positive_color"/>
+        android:drawable="@color/start_home_button"/>
 </selector>
