--- a/app/res/layout/blank_missing_multimedia_layout.xml
+++ b/app/res/layout/blank_missing_multimedia_layout.xml
@@ -16,7 +16,7 @@
         android:scaleType="fitStart"
         android:maxHeight="135px"
         android:maxWidth="663px"
-        app:srcCompat="@drawable/ccbanner"
+        app:srcCompat="@drawable/commcare_by_dimagi"
         android:visibility="gone"
         android:layout_marginEnd="20px"
         android:paddingStart="20px">
