--- a/app/res/layout/install_confirm_fragment.xml
+++ b/app/res/layout/install_confirm_fragment.xml
@@ -76,7 +76,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="16dp"
-                                SquareButtonWithText:backgroundColor="@color/cc_attention_positive_color"
+                                SquareButtonWithText:backgroundColor="@color/start_home_button"
                                 SquareButtonWithText:img="@drawable/install_start"
                                 SquareButtonWithText:subtitle="Start install"
                                 SquareButtonWithText:textColor="@color/white"
@@ -97,7 +97,7 @@
                                 android:layout_height="match_parent"
                                 android:gravity="end"
                                 android:padding="16dp"
-                                SquareButtonWithText:backgroundColor="@color/cc_neutral_color"
+                                SquareButtonWithText:backgroundColor="@color/start_logout_button"
                                 SquareButtonWithText:img="@drawable/install_stop"
                                 SquareButtonWithText:subtitle="Start over"
                                 SquareButtonWithText:textColor="@color/white"/>
