--- a/app/res/layout/screen_seat_app.xml
+++ b/app/res/layout/screen_seat_app.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/screen_login_top_banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/icon_color"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        app:srcCompat="@mipmap/commcare_launcher"
         android:layout_centerHorizontal="true"/>
 
     <TextView
