--- a/app/res/layout/select_install_mode_fragment.xml
+++ b/app/res/layout/select_install_mode_fragment.xml
@@ -73,7 +73,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:paddingHorizontal="24dp"
-                            SquareButtonWithText:backgroundColor="@color/cc_brand_color"
+                            SquareButtonWithText:backgroundColor="@color/barcode_button_color"
                             SquareButtonWithText:img="@drawable/startup_barcode"
                             SquareButtonWithText:subtitle="Scan Application Barcode"
                             SquareButtonWithText:textColor="@color/white"/>
@@ -94,7 +94,7 @@
                             android:background="@drawable/tile_drop_shadow_small_margins"
                             android:gravity="end"
                             android:paddingHorizontal="18dp"
-                            SquareButtonWithText:backgroundColor="@color/cc_light_cool_accent_color"
+                            SquareButtonWithText:backgroundColor="@color/url_button_color"
                             SquareButtonWithText:img="@drawable/startup_url"
                             SquareButtonWithText:subtitle="Enter Code"
                             SquareButtonWithText:textColor="@color/white"/>
