--- a/app/res/layout/update_activity.xml
+++ b/app/res/layout/update_activity.xml
@@ -95,7 +95,7 @@
                 android:id="@+id/check_for_update_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                SquareButtonWithText:backgroundColor="@color/cc_brand_color"
+                SquareButtonWithText:backgroundColor="@color/button_background_color"
                 SquareButtonWithText:img="@drawable/check_update"
                 SquareButtonWithText:subtitle=""
                 SquareButtonWithText:textColor="@color/white"/>
@@ -104,7 +104,7 @@
                 android:id="@+id/stop_update_download_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                SquareButtonWithText:backgroundColor="@color/cc_neutral_color"
+                SquareButtonWithText:backgroundColor="@color/start_logout_button"
                 SquareButtonWithText:img="@drawable/install_stop"
                 SquareButtonWithText:subtitle=""
                 SquareButtonWithText:textColor="@color/white"/>
