--- a/app/res/layout/wifi_direct_main.xml
+++ b/app/res/layout/wifi_direct_main.xml
@@ -102,7 +102,7 @@
                     android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:padding="@dimen/content_min_margin"
-                    SquareButtonWithText:backgroundColor="@color/cc_attention_positive_color"
+                    SquareButtonWithText:backgroundColor="@color/start_home_button"
                     SquareButtonWithText:img="@drawable/wifi_direct_transfer"
                     SquareButtonWithText:subtitle=""
                     SquareButtonWithText:textColor="@color/white"/>
@@ -114,7 +114,7 @@
                     android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:padding="@dimen/content_min_margin"
-                    SquareButtonWithText:backgroundColor="@color/cc_light_cool_accent_color"
+                    SquareButtonWithText:backgroundColor="@color/start_save_button"
                     SquareButtonWithText:img="@drawable/wifi_direct_discover"
                     SquareButtonWithText:subtitle=""
                     SquareButtonWithText:textColor="@color/white"/>
@@ -126,7 +126,7 @@
                     android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:padding="@dimen/content_min_margin"
-                    SquareButtonWithText:backgroundColor="@color/solid_dark_orange"
+                    SquareButtonWithText:backgroundColor="@color/orange_500"
                     SquareButtonWithText:img="@drawable/wifi_direct_submit"
                     SquareButtonWithText:subtitle=""
                     SquareButtonWithText:textColor="@color/white"/>
@@ -138,7 +138,7 @@
                     android:layout_margin="4dp"
                     android:layout_weight="1"
                     android:padding="@dimen/content_min_margin"
-                    SquareButtonWithText:backgroundColor="@color/cc_brand_text"
+                    SquareButtonWithText:backgroundColor="@color/button_background_color"
                     SquareButtonWithText:img="@drawable/wifi_direct_change_mode"
                     SquareButtonWithText:subtitle=""
                     SquareButtonWithText:textColor="@color/white"/>
