--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -156,7 +156,7 @@
                             android:id="@+id/btnSync"
                             android:layout_width="wrap_content"
                             android:layout_height="40dp"
-                            android:text="Sync"
+                            android:text="@string/sync"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
