--- a/app/res/layout/view_job_card.xml
+++ b/app/res/layout/view_job_card.xml
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="per visit"
+                android:text="@string/connect_job_info_per_visit"
                 android:textColor="@color/connect_subtext_color"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -66,7 +66,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="View More"
+            android:text="@string/connect_job_info_view_more"
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
             android:id="@+id/tvDailyVisitTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delivery Hours"
+            android:text="@string/connect_job_info_delivery_hours"
             android:textColor="@color/connect_grey"
             android:textSize="12sp"
             android:visibility="visible"
