--- a/app/res/layout/fragment_signup.xml
+++ b/app/res/layout/fragment_signup.xml
@@ -199,7 +199,6 @@
                     android:id="@+id/connect_consent_check"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/phone_layout"
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="16dp"
                     android:buttonTint="@color/connect_blue_color"
@@ -211,6 +210,7 @@
                     android:id="@+id/checkText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
                     android:text="@string/connect_consent_message_1"
                     android:textColor="@color/connect_grey"
                     android:textSize="16sp" />
