Update square tile font size

--- a/app/res/layout/square_button_text.xml
+++ b/app/res/layout/square_button_text.xml
@@ -28,8 +28,8 @@
         android:paddingBottom="@dimen/standard_spacer"
         android:paddingLeft="@dimen/standard_spacer"
         android:paddingRight="@dimen/standard_spacer"
-        android:textSize="@dimen/font_size_large"
-        app:text_size_small="@dimen/font_size_medium"
+        android:textSize="@dimen/font_size_xlarge"
+        app:text_size_small="@dimen/font_size_large"
         android:paddingStart="@dimen/standard_spacer"
         android:paddingEnd="@dimen/standard_spacer" />
 </RelativeLayout>
