--- a/app/res/layout/square_card.xml
+++ b/app/res/layout/square_card.xml
@@ -43,8 +43,8 @@
                 android:paddingBottom="@dimen/standard_spacer"
                 android:paddingLeft="@dimen/standard_spacer"
                 android:paddingRight="@dimen/standard_spacer"
-                android:textSize="@dimen/font_size_dp_medium"
-                app:text_size_small="@dimen/font_size_xlargest"
+                android:textSize="@dimen/font_size_xlarge"
+                app:text_size_small="@dimen/font_size_large"
                 android:paddingStart="@dimen/standard_spacer"
                 android:paddingEnd="@dimen/standard_spacer" />
         </RelativeLayout>
@@ -56,6 +56,6 @@
             android:layout_below="@+id/card"
             android:layout_gravity="end"
             android:padding="@dimen/help_text_padding"
-            android:textSize="@dimen/font_size_small"/>
+            android:textSize="@dimen/font_size_medium"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
