--- a/app/res/layout/square_card.xml
+++ b/app/res/layout/square_card.xml
@@ -24,14 +24,12 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
-            android:layout_height="170dp">
+            android:layout_height="match_parent">
 
             <org.commcare.views.SquareImageView
                 android:id="@+id/card_image"
-                android:layout_width="130dp"
-                android:layout_centerHorizontal="true"
-                android:paddingVertical="24dp"
-                android:layout_height="150dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
             <org.commcare.views.ResizingTextView
                 android:id="@+id/card_text"
