--- a/app/res/layout/connect_delivery_progress_item.xml
+++ b/app/res/layout/connect_delivery_progress_item.xml
@@ -61,7 +61,7 @@
                     <org.commcare.views.connect.connecttextview.ConnectMediumTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Approved"
+                        android:text="@string/connect_results_summary_approved"
                         android:textColor="@color/connect_grey"
                         android:textSize="11sp" />
 
@@ -114,7 +114,7 @@
                     <org.commcare.views.connect.connecttextview.ConnectMediumTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Remaining"
+                        android:text="@string/connect_results_summary_remaining"
                         android:textColor="@color/connect_grey"
                         android:textSize="11sp" />
 
