-button spacing in the dialog box

--- a/app/res/layout/custom_alert_dialog.xml
+++ b/app/res/layout/custom_alert_dialog.xml
@@ -79,6 +79,7 @@
                     android:padding="@dimen/standard_spacer"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/standard_spacer"
+                    android:layout_marginLeft="@dimen/standard_spacer"
                     android:textSize="@dimen/font_size_dp_medium"
                     android:visibility="gone"
                 android:layout_alignParentEnd="true"
@@ -90,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_button_height"
                 android:padding="@dimen/standard_spacer"
+                android:layout_marginRight="@dimen/standard_spacer"
                 android:layout_toLeftOf="@id/positive_button"
                 android:textSize="@dimen/font_size_dp_medium"
                 android:visibility="gone"
