Update primary colour

--- a/app/res/drawable/progressbar_modern_blue.xml
+++ b/app/res/drawable/progressbar_modern_blue.xml
@@ -14,8 +14,8 @@
             <shape>
                 <corners android:radius="4dp" />
                 <gradient
-                    android:startColor="@color/start_sync_button"
-                    android:endColor="@color/start_sync_button"
+                    android:startColor="@color/cc_brand_color"
+                    android:endColor="@color/cc_brand_color"
                     />
             </shape>
         </scale>
