--- a/app/res/drawable/button_background_white.xml
+++ b/app/res/drawable/button_background_white.xml
@@ -4,5 +4,5 @@
     <corners android:radius="22dp" /> <!-- Rounded corners -->
     <stroke
         android:width="2dp"
-        android:color="@color/button_background_color" /> <!-- Optional border -->
+        android:color="@color/cc_brand_color" /> <!-- Optional border -->
 </shape>
