--- a/app/res/layout/hierarchy_layout.xml
+++ b/app/res/layout/hierarchy_layout.xml
@@ -46,7 +46,7 @@ the License.
             android:layout_height="wrap_content"
             android:text="@string/jump_to_previous"
             android:padding="12dp"
-            android:textColor="@color/button_background_color"
+            android:textColor="@color/cc_brand_color"
             android:background="@color/cc_core_bg"
             style="@style/CommCare.Button.Default"
             android:textSize="@dimen/text_medium"
@@ -59,7 +59,7 @@ the License.
             android:text="@string/jump_to_beginning"
             android:padding="12dp"
             android:textSize="@dimen/text_medium"
-            android:textColor="@color/button_background_color"
+            android:textColor="@color/cc_brand_color"
             android:background="@color/cc_core_bg"
             style="@style/CommCare.Button.Default"
             android:layout_weight="1"/>
@@ -71,7 +71,7 @@ the License.
             android:text="@string/jump_to_end"
             android:padding="12dp"
             android:textSize="@dimen/text_medium"
-            android:textColor="@color/button_background_color"
+            android:textColor="@color/cc_brand_color"
             android:background="@color/cc_core_bg"
             style="@style/CommCare.Button.Default"
             android:layout_weight="1"/>
