--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -79,7 +79,7 @@
     <color name="cc_core_text">#181715</color>
 
     <!-- Brand -->
-    <color name="cc_brand_color">#004EBC</color>
+    <color name="cc_brand_color">#5D70D2</color>
     <color name="cc_brand_bg">#BCDEFF</color>
     <color name="cc_brand_text">#002C5F</color>
 
@@ -147,10 +147,10 @@
     <!-- Button colors -->
     <color name="button_disabled">#d0e3ff</color>
     <color name="button_primary_color"> #3A42C7</color>
-    <color name="title_bar_color"> #5d70D2</color>
+
     <color name="start_home_button">#6AB849</color>
     <color name="start_save_button">#1B998B</color>
-    <color name="button_background_color">#5D70D2</color>
+    <color name="start_sync_button">@color/cc_brand_color</color>
     <color name="start_sync_dark_button">#3b4fb6</color>
     <color name="start_logout_button">#373534</color>
     <color name="barcode_button_color">#3843D0</color>
