--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -258,7 +258,7 @@
     </style>
 
     <style name="PromptedUpdateButtonUpdateLater" parent="PromptedUpdateButtonBase">
-        <item name="android:background">@color/button_background_color</item>
+        <item name="android:background">@color/cc_brand_color</item>
         <item name="android:textSize">@dimen/font_size_xlarge</item>
         <item name="android:paddingLeft">@dimen/standard_spacer_large</item>
         <item name="android:paddingRight">@dimen/standard_spacer_large</item>
@@ -307,7 +307,7 @@
     </style>
 
         <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
-            <item name="backgroundTint">@color/button_background_color</item>
+            <item name="backgroundTint">@color/cc_brand_color</item>
             <item name="android:textColor">@color/white</item>
             <item name="android:textSize">16sp</item>
             <item name="android:gravity">center</item>
@@ -329,9 +329,9 @@
         <item name="cornerFamilyTopRight">rounded</item>
         <item name="cornerFamilyBottomRight">rounded</item>
         <item name="cornerSize">22dp</item>
-        <item name="strokeColor">@color/button_background_color</item>
+        <item name="strokeColor">@color/cc_brand_color</item>
         <item name="strokeWidth">2dp</item>
-        <item name="textColor">@color/button_background_color</item>
+        <item name="textColor">@color/cc_brand_color</item>
     </style>
 
 </resources>
