--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -60,7 +60,7 @@
     </style>
 
     <style name="ActionBar" parent="Widget.AppCompat.Light.ActionBar">
-        <item name="background">@color/title_bar_color</item>
+        <item name="background">@color/cc_brand_color</item>
         <item name="titleTextStyle">@style/ActionBar.TitleTextStyle</item>
         <item name="subtitleTextStyle">@style/ActionBarSubtitleTextStyle</item>
         <item name="logo">@drawable/commcare_actionbar_logo_spacing</item>
@@ -131,7 +131,7 @@
         <item name="textAllCaps">true</item>
         <item name="android:minHeight">@dimen/dp60</item>
         <item name="android:textColor">@color/white</item>
-        <item name="backgroundTint">@color/button_background_color</item>
+        <item name="backgroundTint">@color/primary_button_background</item>
         <item name="cornerRadius">@dimen/dp6</item>
     </style>
 
