--- a/app/res/layout/custom_alert_dialog.xml
+++ b/app/res/layout/custom_alert_dialog.xml
@@ -98,6 +98,7 @@
                 android:layout_toStartOf="@id/positive_button"/>
 
             <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyleOutline"
                 android:id="@+id/negative_button"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_button_height"
