--- a/app/res/layout/choice_dialog_view.xml
+++ b/app/res/layout/choice_dialog_view.xml
@@ -28,7 +28,7 @@
     <com.google.android.material.button.MaterialButton
         style="@style/CustomButtonStyleOutline"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        app:strokeColor="@color/primary_button_background"
+        app:strokeColor="@color/cc_brand_color"
             android:id="@+id/optional_button"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/min_button_height"
