--- a/app/res/layout/custom_alert_dialog.xml
+++ b/app/res/layout/custom_alert_dialog.xml
@@ -72,7 +72,7 @@
             android:layout_marginBottom="@dimen/standard_spacer">
 
             <com.google.android.material.button.MaterialButton
-                app:strokeColor="@color/primary_button_background"
+                app:strokeColor="@color/cc_brand_color"
                 android:id="@+id/positive_button"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/min_button_height"
@@ -86,7 +86,7 @@
                 android:layout_marginEnd="@dimen/standard_spacer"/>
 
             <com.google.android.material.button.MaterialButton
-                app:strokeColor="@color/primary_button_background"
+                app:strokeColor="@color/cc_brand_color"
                 android:id="@+id/neutral_button"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_button_height"
@@ -103,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/min_button_height"
                 android:padding="@dimen/standard_spacer"
-                app:strokeColor="@color/primary_button_background"
+                app:strokeColor="@color/cc_brand_color"
                 android:layout_toLeftOf="@id/neutral_button"
                 android:layout_marginRight="@dimen/standard_spacer"
                 android:layout_marginLeft="@dimen/standard_spacer"
