--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -24,6 +24,8 @@
     <dimen name="standard_spacer_large">24dp</dimen>
     <dimen name="standard_title_margin_bottom">20dp</dimen>
     <dimen name="min_button_height">52dp</dimen>
+    <dimen name="min_button_width">88dp</dimen>
+    <dimen name="rounded_button_corner_radius">22dp</dimen>
     <dimen name="spacer">10dp</dimen>
 
     <dimen name="action_icon_size">60dp</dimen>
