--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/cc_brand_color</item>
         <item name="colorPrimaryDark">@color/cc_brand_text</item>
         <item name="colorAccent">@color/cc_dark_cool_accent_color</item>
-        <item name="colorControlActivated">@color/cc_dark_cool_accent_color</item>
+        <item name="colorControlActivated">@color/cc_brand_color</item>
         <item name="android:textColorSecondary">@color/cc_neutral_text</item>
         <item name="android:textColorPrimary">@color/cc_core_text</item>
         <item name="buttonStyle">@style/Commcare.Button.Primary</item>
