--- a/app/res/layout/draw_layout.xml
+++ b/app/res/layout/draw_layout.xml
@@ -17,6 +17,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_alignParentBottom="true">
 
         <com.google.android.material.button.MaterialButton
@@ -34,6 +35,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnResetDraw"
                 android:layout_width="wrap_content"
+                android:layout_marginHorizontal="16dp"
                 android:layout_height="wrap_content"/>
 
             <com.google.android.material.button.MaterialButton
