--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -148,6 +148,7 @@
     <color name="button_disabled">#d0e3ff</color>
     <color name="button_primary_color"> #3A42C7</color>
 
+    <!-- Square button colours -->
     <color name="start_home_button">#6AB849</color>
     <color name="start_save_button">#1B998B</color>
     <color name="start_sync_button">@color/cc_brand_color</color>
@@ -155,6 +156,8 @@
     <color name="start_logout_button">#373534</color>
     <color name="barcode_button_color">#3843D0</color>
     <color name="url_button_color">#8EA1FF</color>
+    <color name="square_button_icon_color">#FFFFFF</color>
+
 
     <!-- Progress bar colors -->
     <color name="progress_bar_bg">#66000000</color>
