--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -325,10 +325,10 @@
             <item name="android:textStyle">bold</item>
         </style>
     
-    <style name="CustomButtonStyleOutline" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="shapeAppearanceOverlay">@style/RoundedButtonStyle</item>
+    <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="shapeAppearanceOverlay">@style/NegativeButtonShapeAppearanceStyle</item>
     </style>
-    <style name="RoundedButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="NegativeButtonShapeAppearanceStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:background">@drawable/button_background_white</item>
         <item name="cornerFamilyTopLeft">rounded</item>
         <item name="cornerFamilyBottomLeft">rounded</item>
