--- a/app/res/layout/blue_outlined_button.xml
+++ b/app/res/layout/blue_outlined_button.xml
@@ -7,7 +7,7 @@
     android:id="@+id/blue_outlined_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="right"
+    android:layout_gravity="end"
     android:visibility="gone"
     android:padding="10dp"
     tools:viewBindingIgnore="true" />
