--- a/app/res/layout/pin_screen_buttons.xml
+++ b/app/res/layout/pin_screen_buttons.xml
@@ -9,16 +9,20 @@
     tools:viewBindingIgnore="true">
 
     <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/min_button_height"
         android:id="@+id/pin_cancel_button"
         android:textSize="@dimen/font_size_dp_medium"
         android:layout_weight="1"/>
 
+
     <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/min_button_height"
         android:id="@+id/pin_confirm_button"
+        android:textSize="@dimen/font_size_dp_medium"
         android:enabled="false"
         android:layout_weight="1"/>
 
