--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -323,6 +323,7 @@
             <item name="iconPadding">8dp</item>
             <item name="android:textAllCaps">false</item>
             <item name="android:textStyle">bold</item>
+            <item name="android:layout_margin">@dimen/spacer_small</item>
         </style>
     
     <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
