--- a/app/res/values/attrs.xml
+++ b/app/res/values/attrs.xml
@@ -52,5 +52,7 @@
     <declare-styleable name="FilePreference">
         <attr name="file_type" format="string"/>
     </declare-styleable>
-
+    <attr name="buttonDisabledColor" format="reference|color"/>
+    <attr name="buttonPressedColor" format="reference|color"/>
+    <attr name="buttonDefaultColor" format="reference|color"/>
 </resources>
