--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -14,8 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:paddingBottom="20dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp">
@@ -23,7 +23,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/connect_delivery_details_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/connect_dark_blue_color"
                 android:padding="16dp">
 
@@ -53,89 +53,90 @@
                     android:id="@+id/connect_delivery_visits_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginTop="20dp"
                     android:contentDescription="@null"
                     android:src="@drawable/ic_connect_check_circle"
+                    app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_total_visits_text"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/connect_review" />
+                    app:layout_constraintTop_toTopOf="@+id/connect_delivery_total_visits_text" />
 
                 <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                     android:id="@+id/connect_delivery_total_visits_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="25dp"
                     android:textColor="@color/white"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/connect_delivery_visits_icon"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/connect_delivery_visits_icon"
-                    app:layout_constraintTop_toTopOf="@id/connect_delivery_visits_icon" />
+                    app:layout_constraintTop_toBottomOf="@+id/connect_review" />
+
 
                 <ImageView
                     android:id="@+id/connect_delivery_days_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginTop="20dp"
                     android:contentDescription="@null"
                     android:src="@drawable/ic_connect_check_circle"
+                    app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_days_text"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/connect_delivery_visits_icon" />
+                    app:layout_constraintTop_toTopOf="@+id/connect_delivery_days_text" />
 
                 <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                     android:id="@+id/connect_delivery_days_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="25dp"
                     android:textColor="@color/white"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/connect_delivery_days_icon"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/connect_delivery_days_icon"
-                    app:layout_constraintTop_toTopOf="@id/connect_delivery_days_icon" />
+                    app:layout_constraintTop_toBottomOf="@+id/connect_delivery_total_visits_text" />
 
                 <ImageView
                     android:id="@+id/connect_delivery_max_daily_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginTop="20dp"
                     android:contentDescription="@null"
                     android:src="@drawable/ic_connect_check_circle"
+                    app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_max_daily_text"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/connect_delivery_days_icon" />
+                    app:layout_constraintTop_toTopOf="@+id/connect_delivery_max_daily_text" />
 
                 <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                     android:id="@+id/connect_delivery_max_daily_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="25dp"
                     android:textColor="@color/white"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_daily_icon"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/connect_delivery_max_daily_icon"
-                    app:layout_constraintTop_toTopOf="@id/connect_delivery_max_daily_icon" />
+                    app:layout_constraintTop_toBottomOf="@+id/connect_delivery_days_text" />
 
                 <ImageView
                     android:id="@+id/connect_delivery_budget_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginTop="20dp"
                     android:contentDescription="@null"
                     android:src="@drawable/ic_connect_check_circle"
+                    app:layout_constraintBottom_toBottomOf="@+id/connect_delivery_budget_text"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/connect_delivery_max_daily_icon" />
+                    app:layout_constraintTop_toTopOf="@+id/connect_delivery_budget_text" />
 
                 <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                     android:id="@+id/connect_delivery_budget_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="25dp"
                     android:textColor="@color/white"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/connect_delivery_budget_icon"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/connect_delivery_budget_icon"
-                    app:layout_constraintTop_toTopOf="@id/connect_delivery_budget_icon" />
+                    app:layout_constraintTop_toBottomOf="@+id/connect_delivery_max_daily_text" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardButtonLayout"
@@ -199,12 +200,9 @@
                             app:roundButtonIconTintColor="@color/connect_dark_blue_color"
                             app:roundButtonTextColor="@color/connect_blue_color"
                             app:roundButtonTextSize="5sp" />
-
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
