--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -270,8 +270,10 @@
     </style>
 
     <style name="MapButton">
-        <item name="backgroundTint">@null</item>
         <item name="android:minWidth">@dimen/map_button_min_width</item>
+        <item name="cornerRadius">@dimen/rounded_button_corner_radius</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetTop">0dp</item>
     </style>
 
     <style name="MapButtonColored" parent="MapButton">
@@ -279,15 +281,15 @@
     </style>
 
     <style name="MapButtonGreen" parent="MapButtonColored">
-        <item name="android:background">@drawable/button_green_background</item>
+        <item name="android:backgroundTint">@color/button_green_background</item>
     </style>
 
     <style name="MapButtonRed" parent="MapButtonColored">
-        <item name="android:background">@drawable/button_red_background</item>
+        <item name="android:backgroundTint">@color/button_red_background</item>
     </style>
 
     <style name="MapButtonOrange" parent="MapButtonColored">
-        <item name="android:background">@drawable/button_orange_background</item>
+        <item name="android:backgroundTint">@color/button_orange_background</item>
     </style>
 
     <color name="login_edit_text_color">@color/cc_core_text</color>
