--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -315,7 +315,7 @@
     </style>
 
         <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
-            <item name="backgroundTint">@color/cc_brand_color</item>
+            <item name="backgroundTint">@color/primary_button_background</item>
             <item name="android:textColor">@color/white</item>
             <item name="android:textSize">16sp</item>
             <item name="android:gravity">center</item>
