--- a/app/res/layout/entity_select_layout.xml
+++ b/app/res/layout/entity_select_layout.xml
@@ -53,6 +53,7 @@
         android:visibility="gone"/>
 
     <RelativeLayout
+        android:id="@+id/progress_container"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/entity_select_filter_dropdown">
@@ -63,7 +64,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"/>
+
+        <TextView
+            android:id="@+id/progress_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/entity_select_loading"
+            android:padding="8dp"
+            android:layout_centerInParent="true" />
+
     </RelativeLayout>
+
 
     <FrameLayout
         android:layout_width="match_parent"
